--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>timely</title>
     <base href="/" />
+    <link rel="icon" href="data:;base64,iVBORwOKGO=" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
